Refactor WebLogic setup and configuration tasks; introduce start/stop functionality and update variable structure

--- a/ansible/roles/setup-weblogic/templates/create_domain.py.j2
+++ b/ansible/roles/setup-weblogic/templates/create_domain.py.j2
@@ -1,11 +1,11 @@
 readTemplate('{{ oracle_home }}/wlserver/common/templates/wls/wls.jar')
 
 set('Name', '{{ weblogic_domain }}')
-set('AdminServerName', '{{ admin_server_name }}')
+set('AdminServerName', '{{ admin_server.name }}')
 
 cd('/Servers/AdminServer')
-set('ListenAddress', '{{ admin_server_address }}')
-set('ListenPort', {{ admin_server_port }})
+set('ListenAddress', '{{ admin_server.address }}')
+set('ListenPort', {{ admin_server.port }})
 
 cd('/')
 cd('Security/{{ weblogic_domain }}/User/weblogic')
@@ -13,20 +13,20 @@ set('Name', '{{ weblogic_user }}')
 cmo.setPassword('{{ weblogic_pass }}')
 
 cd('/')
-create('{{ machine_name }}', 'Machine')
-cd('/Machines/{{ machine_name }}')
-create('{{ machine_name }}', 'NodeManager')
-cd('NodeManager/{{ machine_name }}')
-set('ListenAddress', '{{ managed_machine_address }}')
-set('ListenPort', {{ nodemanager_port }})
+create('{{ managed_server.name }}', 'Machine')
+cd('/Machines/{{ managed_server.name }}')
+create('{{ managed_server.name }}', 'NodeManager')
+cd('NodeManager/{{ managed_server.name }}')
+set('ListenAddress', '{{ managed_server.address }}')
+set('ListenPort', {{ nodemanager.port }})
 set('NMType', 'Plain')
 
 cd('/')
-create('{{ managed_server_name }}', 'Server')
-cd('/Servers/{{ managed_server_name }}')
-set('ListenAddress', '{{ managed_machine_address }}')
-set('ListenPort', {{ managed_server_port }})
-set('Machine', '{{ machine_name }}')
+create('{{ managed_server.name }}', 'Server')
+cd('/Servers/{{ managed_server.name }}')
+set('ListenAddress', '{{ managed_server.address }}')
+set('ListenPort', {{ managed_server.port }})
+set('Machine', '{{ managed_server.name }}')
 
 writeDomain('{{ domain_home }}')
 closeTemplate()
