--- a/ansible/roles/setup-tomcat/templates/setenv.sh.j2
+++ b/ansible/roles/setup-tomcat/templates/setenv.sh.j2
@@ -2,5 +2,17 @@ JAVA_HOME={{ java_home }}
 CATALINA_HOME={{ tomcat_home }}
 CATALINA_BASE={{ tomcat_home }}
 PATH=$JAVA_HOME/bin:$PATH
-JAVA_OPTS="-Xms512m -Xmx1024m"
-CATALINA_OPTS="-server -XX:+UseParallelGC"
+
+JAVA_OPTS="-Xms{{ tomcat_xms }} -Xmx{{ tomcat_xmx }} \
+-XX:+HeapDumpOnOutOfMemoryError \
+-XX:HeapDumpPath={{ tomcat_home }}/logs \
+-Djava.awt.headless=true"
+
+CATALINA_OPTS="-server -XX:+UseG1GC \
+-XX:+ParallelRefProcEnabled \
+-XX:MaxGCPauseMillis=200 \
+-XX:+UseStringDeduplication \
+-Dcom.sun.management.jmxremote \
+-Dcom.sun.management.jmxremote.port=9999 \
+-Dcom.sun.management.jmxremote.ssl=false \
+-Dcom.sun.management.jmxremote.authenticate=false"
